[package]
name = "penlib"
description = "A library which provides various attributes of different pen brands and products."
version = "0.0.3"
categories = ["graphics"]
authors = ["cbgbt <cbgbt@cabbage.bot>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/cbgbt/penlib"

[dependencies]
palette = "0.4"
